--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Hello, I'm Raju Sharma</h1> 
             <p>Welcome to my personal portfolio website. Here, you will find more about me, my 
 projects, and how to contact me.</p> 
-            <a href="about.html" class="btn">Learn More About Me</a> 
+            <a class="btn" href="about.html" >Learn More About Me</a> 
         </div> 
     </section> 
  
