--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@
         <div class="project-grid">
           <!-- Project 1 -->
           <div class="project-card">
-            <img src="Web.jpg" alt="Web App Project" />
-            <h3>Task Fee Web App</h3>
-            <p>A web dashboard to track and manage student fee payments by month using HTML, CSS, and JavaScript.</p>
+            <img src="p.png" alt="Web App Project" />
+            <h3>Pomodoro Timer</h3>
+            <p>A This is a sleek and responsive Pomodoro Timer I built to help improve focus and productivity using the tried-and-true Pomodoro technique using HTML, CSS, and JavaScript.</p>
           </div>
 
           <!-- Project 2 -->
