--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,9 @@
         <div class="project-grid">
           <!-- Project 1 -->
           <div class="project-card">
-            <img src="p.png" alt="Web App Project" />
+           <a href="https://rajusharma1095.github.io/Pomodoro-Timer/">
+             <img src="p.png" alt="Web App Project" />
+             </a>
             <h3>Pomodoro Timer</h3>
             <p>A This is a sleek and responsive Pomodoro Timer I built to help improve focus and productivity using the tried-and-true Pomodoro technique using HTML, CSS, and JavaScript.</p>
           </div>
