--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <div class="project-grid">
           <!-- Project 1 -->
           <div class="project-card">
-           <a href="https://rajusharma1095.github.io/Pomodoro-Timer/">
+           <a href="https://rajusharma1095.github.io/Pomodoro-Timer/" target="_blank">
              <img src="p.png" alt="Web App Project" />
              </a>
             <h3>Pomodoro Timer</h3>
