--- a/projects.html
+++ b/projects.html
@@ -34,16 +34,18 @@
 
           <!-- Project 2 -->
           <div class="project-card">
-            <img src="ML.jpg" alt="Machine Learning Project" />
-            <h3>House Price Predictor</h3>
-            <p>ML model built with Python and sklearn to predict prices based on real estate data.</p>
+            <img src="ML.jpg" alt="web Project" />
+            <h3>Working on  Dice Roller / Coin Flip App </h3>
+            <p>What it does: Simulates dice rolls or coin flips with nice animations.
+                Fun use: Great for board game fans or decision-making tools..</p>
           </div>
 
           <!-- Project 3 -->
           <div class="project-card">
-            <img src="Flutter.jpg" alt="Flutter App Project" />
-            <h3>Fitness Tracker App</h3>
-            <p>Mobile app built in Flutter to track steps, workouts, and fitness goals effectively.</p>
+            <img src="Flutter.jpg" alt="web Project" />
+            <h3>Flashcard Quiz App</h3>
+            <p>What it does: Displays questions or flashcards that flip on click/tap.
+               Perfect for: Learning vocab, math facts, or preparing quizzes.</p>
           </div>
         </div>
       </div>
