--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
            <a href="https://rajusharma1095.github.io/Pomodoro-Timer/" target="_blank">
              <img src="p.png" alt="Web App Project" />
              </a>
-            <h3>Pomodoro Timer</h3>
+            <h3> Pomodoro Timer</h3>
             <p>A This is a sleek and responsive Pomodoro Timer I built to help improve focus and productivity using the tried-and-true Pomodoro technique using HTML, CSS, and JavaScript.</p>
           </div>
 
@@ -43,7 +43,7 @@
           <!-- Project 3 -->
           <div class="project-card">
             <img src="Flutter.jpg" alt="web Project" />
-            <h3>Flashcard Quiz App</h3>
+            <h3>Working On Flashcard Quiz App</h3>
             <p>What it does: Displays questions or flashcards that flip on click/tap.
                Perfect for: Learning vocab, math facts, or preparing quizzes.</p>
           </div>
